--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body bgcolor="#D3D3D3">
     <hr align="center">
    <font color="#000000"><h1 align="center">РЕЦЕПТЫ КОФЕ/COFFEE RECIPES</h1></font>
-   <center><img src="img/image6.jpg" width="500" height="400" hcspace="20px" vspace="20px"></center>
+   <center><img src="img/i.jpg" width="500" height="400" hcspace="20px" vspace="20px"></center>
    <hr size="3" color="#800000" width="500">
    <font color="#000000"><h2 align="center">АМЕРИКАНО/AMERICANO</h2></font>
   <center> <a href="vivi.index.html" target="_self">ОПИСАНИЕ/DESCRIPTION</a></center>
