--- a/vivi.index.html
+++ b/vivi.index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body bgcolor="#D3D3D3">
-    <img src="img/image6.jpg"  alt="Coffee" width="500" align="left" hspace="20px" border="10px">
+    <img src="img/i.jpg"  alt="Coffee" width="500" align="left" hspace="20px" border="10px">
     <p> Aмерикано в домашних условиях
         Налейте чистой, горячей воды (200 – 250 мл) в чашку, температура воды 80 – 85 град. (чайник после закипания должен постоять минут пять).
         Приготовьте двойной эспрессо из вашего любимого сорта кофе.
